# ChilloutVR-Mods

./: .gitignore  CVR.sln  Directory.Build.props  README.md
EnableFly/: EnableFly.cs
FastDecrypt/: FastDecrypt.cs  FastDecrypt.csproj
FastDecrypt/native/: Cargo.toml  build.rs
FastDecrypt/native/src/: decrypt.rs  lib.rs  main.rs
NoAllocJson/: NoAllocJson.cs  NoAllocJson.csproj  Patch.cs
NoAllocJson/native/: Cargo.toml  build.rs
NoAllocJson/native/lib/: mono-2.0-bdwgc.lib
NoAllocJson/native/src/: lib.rs  mono.rs  ser.rs
NoVideo/: NoVideo.cs
RandomPatches/: RandomPatches.cs
